Remove google key and fix for layout issues in StayDetail

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -15,21 +15,19 @@
 }
 
 .header-wrapper {
-
   &.sticky {
     position: sticky;
     z-index: 8;
     background: #FFFFFF;
     box-shadow: #0000001f 0 3px 12px;
     top: 0;
-
   }
-
 }
 
 .stay-detail-layout {
   display: grid;
-  grid-template-columns: 392px 1fr 392px;
+  // grid-template-columns: 392px 1fr 392px;
+  grid-template-columns: minmax(80px, 1fr) minmax(auto, 1920px) minmax(80px, 1fr);
 
   >* {
     grid-column: 2;
